Development
	Return true in detect playlist on a uri with .m3u in the uri
	Add -softvol option to -volume detect code to keep from altering master volume
	Add album art lookup for some shoutcast stations
	Add melting of max values to audio meter
	Use patch by Fabio Scavone as a model to implement more accurate seeking from tracker
	Fix .spec.in file to account for new gnome-mplayer.xml file
	Fix problem problem with shoutcast playlists not autostarting
	Fix warning about invalid list iter
0.9.9
	Fix --without-gconf case in configure
	Account for store == NULL case
	Minor change to gnome-power-manager detection
	Source in gconf .m4 files only when we are using gconf
	Fix initial state of play/pause especially when playing shoutcast playlist
	Fix media_label width, which playing audio only
	Updated Polish translation
	Use -playlist fallback when mplayer doesn't
	Bump QuickTime emulation to 7.6.4
	Fix some problems with Apple.com HD trailers
	Fix problem with playstate tracking, observed by using mplayer from git
	Fix window size when playlist is shown and video not present
	Update playlist in header when item added to playlist
	Apply showcontrols default value patch
	Fix media title trim when long title and window is large bug #336
	Don't adjust mediasize when in fullscreen mode
	Keep window from growing when media_detail or info is visible with playlist
	Don't write NULL data to pref store
	Allow passing a optical device name with a track from the command line "cdda://5"
	Add optical device name where needed
	Patch to fix https://bugs.webkit.org/show_bug.cgi?id=31519 by Tim Yamin
	Make XScrnSaver usage optional in configure
	Quicker path for streaming_media, when media appears to be local when using GIO
	Implement volume gain under software volume control
	Fix for GTK older thant 2.16
	Fix window sizeing issue when we show the playlist
	Version bump to 0.9.9 to start preparing for next release
	Add open folder to main file menu